# YoureHired

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md
backend/: pyproject.toml
backend/app/: config.py  constants.py  main.py  model_config.py
backend/app/agents/: __init__.py  planner_agent.py  repo_analyst_agent.py  search_agent.py  summarizer_agent.py
backend/app/agents/drill/: __init__.py  coding_drill_agent.py  debugging_drill_agent.py  design_drill_agent.py  (+1 more)
backend/app/api/: __init__.py  company_info.py  drill.py  evaluation.py  roles.py  scout.py  user_selection.py
backend/app/schemas/: __init__.py  company_info.py  drill.py  evaluation.py  guardrails.py  scout.py  user_selection.py
backend/app/services/: __init__.py  company_research.py  drill_generation.py  feedback_persistence.py  github_client.py  github_repos_db.py  repo_filtering.py  scout_analysis.py  scout_orchestrator.py  session_store.py  task_registry.py
backend/app/utils/: __init__.py  sanitization.py
backend/tests/: conftest.py  test_company_research_service.py  test_company_research_stream.py  test_drill_api.py  test_drill_schemas.py  test_drill_service.py  test_github_client.py  test_github_repos_db.py  test_integration.py  test_main.py  test_model_config.py  test_repo_analyst_agent.py  test_repo_filtering.py  test_roles.py  test_sanitization.py  test_scout_analysis.py  test_scout_orchestrator.py  test_scout_profile_api.py  test_scout_schemas.py  test_scout_search_api.py  test_session_store.py  test_streaming_schemas.py  test_task_registry.py  test_user_selection.py
(+199 files in other folders)
